--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,7 +1,7 @@
 #Minecraft server properties
 #Wed May 28 22:09:47 UTC 2025
 allow-flight=false
-allow-nether=true
+allow-nether=false
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
 debug=false
@@ -28,7 +28,7 @@ level-seed=
 level-type=minecraft\:normal
 log-ips=true
 max-chained-neighbor-updates=1000000
-max-players=20
+max-players=2025
 max-tick-time=60000
 max-world-size=29999984
 motd=§r              §5§l(MSX)  §dHosting Gratuito§r\n          §f§nhttps\://discord.gg/w9xt8ydNZe
